# squoosher

./: CLAUDE.md  README.md  batch-squoosh-spec.md  pyproject.toml  requirements.txt  squoosh.py  test_squoosh.py
